--- a/Learning-NodeJS/Adding-Authentication/.env.example
+++ b/Learning-NodeJS/Adding-Authentication/.env.example
@@ -1,3 +1,3 @@
 MONGODB_PASSWORD=database_password
 MONGODB_USERNAME=user_name
-SENDGRID_TOKEN=radfsd_fadfd_assddfff
+API_KEY=SG.uasdfhudhsfjsdhfiuhsiuhfiauhsudhfiuhahusfh
