--- a/Learning-NodeJS/Adding-Authentication/package.json
+++ b/Learning-NodeJS/Adding-Authentication/package.json
@@ -31,7 +31,9 @@
     "mysql2": "^1.6.1",
     "nodemailer": "^6.7.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.13.0",
     "pug": "^2.0.3",
+    "save": "^2.5.0",
     "sequelize": "^5.0.0-beta.11"
   }
 }
