Using stripe in our App

--- a/Learning-NodeJS/Adding-Authentication/.env.example
+++ b/Learning-NodeJS/Adding-Authentication/.env.example
@@ -1,3 +1,4 @@
 MONGODB_PASSWORD=database_password
 MONGODB_USERNAME=user_name
 API_KEY=SG.uasdfhudhsfjsdhfiuhsiuhfiauhsudhfiuhahusfh
+SECRET_KEY=sk_test_fdhfjd4343f3ff4g4g4
