--- a/Learning-NodeJS/Adding-Authentication/package.json
+++ b/Learning-NodeJS/Adding-Authentication/package.json
@@ -34,6 +34,7 @@
     "pdfkit": "^0.13.0",
     "pug": "^2.0.3",
     "save": "^2.5.0",
-    "sequelize": "^5.0.0-beta.11"
+    "sequelize": "^5.0.0-beta.11",
+    "stripe": "^9.1.0"
   }
 }
