--- a/Learning-NodeJS/REST-API/package.json
+++ b/Learning-NodeJS/REST-API/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "s": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
