--- a/Learning-NodeJS/REST-API/package.json
+++ b/Learning-NodeJS/REST-API/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-validator": "^6.14.0",
     "s": "^1.0.0"
   },
   "devDependencies": {
