--- a/Learning-NodeJS/REST-API/package.json
+++ b/Learning-NodeJS/REST-API/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
+    "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "s": "^1.0.0"
   },
