--- a/Learning-NodeJS/REST-API/package.json
+++ b/Learning-NodeJS/REST-API/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.14.0",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "multer": "^1.4.4",
     "s": "^1.0.0"
   },
   "devDependencies": {
