--- a/Learning-NodeJS/REST-API/package.json
+++ b/Learning-NodeJS/REST-API/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
-    "s": "^1.0.0"
+    "s": "^1.0.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
