Adding Environment Variables

--- a/Learning-NodeJS/Adding-Authentication/.env.example
+++ b/Learning-NodeJS/Adding-Authentication/.env.example
@@ -1,4 +1,6 @@
 MONGODB_PASSWORD=database_password
 MONGODB_USERNAME=user_name
+MONGODB_DATABASE_NAME=our_database_name
+PORT=3333
 API_KEY=SG.uasdfhudhsfjsdhfiuhsiuhfiauhsudhfiuhahusfh
-SECRET_KEY=sk_test_fdhfjd4343f3ff4g4g4
+STRIPE_KEY=sk_test_fdhfjd4343f3ff4g4g4
