--- a/Learning-NodeJS/Adding-Authentication/package.json
+++ b/Learning-NodeJS/Adding-Authentication/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^6.14.0",
+    "helmet": "^5.1.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "multer": "^1.4.4",
@@ -34,6 +35,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.13.0",
     "pug": "^2.0.3",
+    "s": "^1.0.0",
     "save": "^2.5.0",
     "sequelize": "^5.0.0-beta.11",
     "stripe": "^9.1.0"
