--- a/Learning-NodeJS/Adding-Authentication/package.json
+++ b/Learning-NodeJS/Adding-Authentication/package.json
@@ -30,6 +30,7 @@
     "helmet": "^5.1.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.7.3",
