--- a/Learning-NodeJS/NodeTS/package.json
+++ b/Learning-NodeJS/NodeTS/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0"
   }
 }
