--- a/Learning-NodeJS/NodeTS/package.json
+++ b/Learning-NodeJS/NodeTS/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0"
   }
